--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "browsers": [
       "ie/latest",
       "chrome/latest",
-      "firefox/latest"
+      "firefox/latest",
+      "safari/latest",
+      "iphone/latest",
+      "ipad/latest",
+      "android-browser/latest"
     ]
   },
   "scripts": {
