--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "safari/latest",
       "iphone/latest",
       "ipad/latest",
-      "android-browser/latest"
+      "android-browser/latest",
+      "opera/latest"
     ]
   },
   "scripts": {
