--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redditjs",
+  "name": "reddit.js",
   "version": "0.0.1",
   "description": "Reddit API wrapper for the browser",
   "main": "reddit.js",
