--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     ],
     "files": "spec/*.js",
     "browsers": [
-      "ie/latest",
+      "ie/8..latest",
       "chrome/latest",
       "firefox/latest",
       "android-browser/latest"
