Fix for ie 8 and 9

--- a/.jshintrc
+++ b/.jshintrc
@@ -29,6 +29,7 @@
     "expect": false,
     "it": false,
     "xdescribe": false,
-    "require": false
+    "require": false,
+    "XDomainRequest": false
   }
 }
