Remove more browsers that fail on Testling

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "browsers": [
       "ie/8..latest",
       "chrome/latest",
-      "firefox/latest",
-      "android-browser/latest"
+      "firefox/latest"
     ]
   },
   "scripts": {
