Tests will not run in ie 8 or 9 :(. Will need to manually test

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     ],
     "files": "spec/*.js",
     "browsers": [
-      "ie/8..latest",
+      "ie/latest",
       "chrome/latest",
       "firefox/latest"
     ]
