--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   },
   "scripts": {
     "test": "jshint reddit.js spec/*.js && testling",
-    "minify": "uglifyjs reddit.js --compress --lint --comments --screw-ie8 --output reddit.min.js"
+    "minify": "uglifyjs reddit.js --compress --lint --comments --output reddit.min.js"
   }
 }
