--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "scripts": [
       "spec/util/sinon.js",
       "spec/util/sinon-ie.js",
-      "reddit.js"
+      "reddit.min.js"
     ],
     "files": "spec/*.js",
     "browsers": [
