--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "chai": "1.9.1",
     "testling": "1.6.1",
     "uglify-js": "2.4.13",
-    "jshint": "2.5.0"
+    "jshint": "2.5.0",
+    "phantomjs": "*"
   },
   "testling": {
     "harness": "mocha-bdd",
