Cannot support IE 8 and 9. Using CORS requires a text/plain response for JSON encoded data. Who'd have thunk it?

--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   },
   "scripts": {
     "test": "jshint reddit.js spec/*.js && testling",
-    "minify": "uglifyjs reddit.js --compress --lint --comments --output reddit.min.js"
+    "minify": "uglifyjs reddit.js --compress --lint --screwie8 --comments --output reddit.min.js"
   }
 }
