--- a/package.json
+++ b/package.json
@@ -29,12 +29,7 @@
       "spec/util/sinon-ie.js",
       "reddit.min.js"
     ],
-    "files": "spec/*.js",
-    "browsers": [
-      "ie/latest",
-      "chrome/latest",
-      "firefox/latest"
-    ]
+    "files": "spec/*.js"
   },
   "scripts": {
     "test": "jshint reddit.js spec/*.js && testling",
