--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ node_js:
 before_install: npm i -g npm
 install:
   - npm install
+before_script:
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
   - npm test
